--- a/public/stat120/Day19.Rmd
+++ b/public/stat120/Day19.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Inference for multiple proportions"
+title: "Inference for means using the t-distribution"
 subtitle: "<br/> STAT 120"
 author: "Bastola"
 date: "`r format(Sys.Date(), ' %B %d %Y')`"
@@ -71,8 +71,6 @@ yt <- 0
 
 set.seed(1234)
 
-
-
 # read.csv("https://raw.githubusercontent.com/deepbas/statdatasets/main/agstrat.csv")
 
 ```
@@ -96,7 +94,7 @@ layout: true
 
 class: title-slide, middle
 
-# .fancy[Inference for multiple proportions]
+# .fancy[Inference for means using the t-distribution]
 
 ### .fancy[Stat 120]
 
@@ -104,368 +102,458 @@ class: title-slide, middle
 
 ---
 
-# Tests for Categorical Variable(s)
+class: middle
 
-**Goodness-of-fit test**
+# The SE for means
 
-- Test a claim about the distribution of one categorical variable
-- E.g. are 6 M&M colors equally likely?
-- E.g. is Biden's approval rating 50%?
+.bql.font80[
+- The standard error for $\bar{x}$ is
+$$S E_{\bar{x}}=\frac{\sigma}{\sqrt{n}}$$
+where $\sigma$ is the population SD of your response
 
-
-**Chi-square test for association**
-
-- Determine if a relationship between two categorical variables is statistically significant
-- E.g. Does M&M color distribution depend on type (chocolate vs. peanut)?
-
----
-
-# Test for one categorical variable
-
-Seen single proportion tests before
-  - Example : Test if the proportion of Reese’s Pieces that are orange is different from 1/3.
-
-
-\begin{aligned}
-H_0 : p = 1/3\\
-H_a : p \neq 1/3
-\end{aligned}
-
-What if we want to test proportions for several categories at once?
-
-  - Example: Are the three colors (orange, yellow, brown) of Reese’s Pieces equally likely?
-
-$H_0$ specifies a proportion,  $p_i$ , for each category.
-
-
----
-
-# Test for one categorical variable
-
-
-The proportions do not have to be the same. e.g: Grade distribution
-
-\begin{aligned}
-H_0 :p_{A}=0.2 \quad p_{B}=0.3 \quad p_{C}=0.3 \quad p_{D}=0.1 \quad p_{F}=0.1\\
-H_a :\text{ at least one proportion different}
-\end{aligned}
-
----
-
-# Rock-Paper-Scissors
-
-
-ROCK | PAPER | SCISSORS | TOTAL
-----| ---- | ------|-------
-36 | 12 | 37 | 85 
-
-.out-t[How would we test whether all of these categories are equally likely?]
-
-Conduct a hypothesis test
-  - State Hypothesis
-  - Calculate a test statistic, based on your sample data
-  - Create a distribution of this statistic, as it would be observed if the null hypothesis were true
-  - Measure how extreme your test statistic is, as compared to the distribution generated under null
-
----
-
-# Test Statistic
-
-Why can’t we use the familiar formula to get the test statistic?
-
-$$\frac{\text { sample statistic - null value }}{\text { SE }}$$
-
-
-- More than one sample statistic
-- More than one null value
-
-.out-t[We need something a bit more complicated ...]
-
-
----
-
-# Observed Counts
-
-
-- The observed counts are the actual counts observed in the study
-
-ROCK | PAPER | SCISSORS | TOTAL
-----| ---- | ------|-------
-36 | 12 | 37 | 85 
-
---
-
-- The expected counts are the expected counts if the null hypothesis were true
-
-- For each cell, the expected count is the sample size $(n)$ times the null proportion, $p_i$
-
-
-&nbsp; | ROCK | PAPER | SCISSORS | TOTAL
-----| ----| ---- | ------|-------
-Observed | 36 | 12 | 37 | 85 
-Expected | 28.33 | 28.33 | 28.33 | 85 
-
-
-
----
-
-# Chi-Square Statistic
-
-- A test statistic is one number, computed from the data, which we can use to assess the null hypothesis
-
-- The chi-square statistic is a test statistic for categorical variables:
-
-
-\begin{aligned}
-\chi^2 = \sum{\frac{(observed - expected)^2}{expected}}
-\end{aligned}
-
----
-
-#  Rock-Paper-Scissors
-
-&nbsp; | ROCK | PAPER | SCISSORS | TOTAL
-----| ----| ---- | ------|-------
-Observed | 36 | 12 | 37 | 85 
-Expected | 28.33 | 28.33 | 28.33 | 85 
-
-
-\begin{aligned}
-\chi^2 &= \ldots \\
-&\approx \ldots
-\end{aligned}
-
----
-
-# What next?
-
-We have a test statistic.  What else do we need to perform the hypothesis test?
-
-A distribution of the test statistic assuming $H_0$ is true
-
-How do we get this? Two options:
-1. Simulation
-2. Theoretical Distribution
-
----
-
-# Simulation
-
-1. Take 3 scraps of paper and label them Rock, Paper, Scissors. Fold or crumple them so they are indistinguishable. Choose one at random and record the result.
-
-2. Repeat a number of times to match the original sample size and get a table of observed counts. 
-
-3. Calculate the $x^{2}$-statistic.
-
-4. Repeat this many times to get a randomization distribution of many $x^{2}$-statistics.
-
-5. How extreme is the actual test statistic in this randomization distribution?
-
-
----
-
-# Chi-Square Distribution
-
-<center>
-<img src="images/chisimulation.png" width="65%" height="65%"><br>
-</center>
-
-
----
-
-# Chi-Square Distribution
-
-- If each of the expected counts are at least 5, AND if the null hypothesis is true, then the $\chi^2$ statistic follows a $\chi^2$ distribution, with degrees of freedom equal to
-
-$$df = \text{number of categories} -1$$
-
-- Rock-Paper-Scissors:
-
-```
-df = 3 - 1 = 2
-```
-
----
-
-# Chi-Square Distribution
-
-<center>
-<img src="images/chisquare.png" width="65%" height="65%"><br>
-</center>
-
-
----
-
-
-# p-value using Chi-square distribution
-
-<center>
-<img src="images/chilock.png" width="75%" height="75%"><br>
-</center>
-
----
-
-# Goodness of Fit
-
-- A $\chi^2$ test for goodness of fit test determines whether the distribution of a categorical variable is the same as some null hypothesized distribution
-
-- The null hypothesized proportions for each category do not have to be the same
-
----
-
-# Chi-Square Test for Goodness of Fit
-
-- State null hypothesized proportions for each category, pi.  Alternative is that at least one of the proportions is different than specified in the null.
-
-- Calculate the expected counts for each cell as $n\cdot p_i$.  Make sure they are all greater than 5 to proceed.
-
-- Calculate the $\chi^2$ statistic:
-
-\begin{aligned}
-\chi^2 = \sum{\frac{(observed - expected)^2}{expected}}
-\end{aligned}
-
-- Compute the p-value as the area in the tail above the $\chi^2$ statistic, for a $\chi^2$ distribution with   $df = (\text{number of categories - 1})$.
-
-- Interpret the p-value in context.
-
-
----
-
-# Mendel’s Pea Experiment
-
-Between 1856 and 1863 Gregor Mendel cultivated and tested roughly 29,000 pea plants. This study showed that one in four pea plants was purebred recessive, two out of four were hybrid and one out of four were purebred dominant. 
-
-Mendel's work was rejected at first and was not widely accepted until after he died. He is now known as the “father of modern genetics
-
-.footnote[Source: Mendel, Gregor. (1866). Versuche ber Pflanzen-Hybriden. Verh. Naturforsch. Ver. Brünn 4: 3–47 (in English in 1901, Experiments in Plant Hybridization, J. R. Hortic. Soc. 26: 1–32)]
-
----
-
-# Mendel’s Pea Experiment
-
-.pull-left[
-<center>
-<img src="images/pea.jpg" width="75%" height="75%"><br>
-</center>
-
-]
-.pull-right[
-
-S, Y: Dominant and s, y: Recessive
-Mate SSYY with ssyy: 1st Generation: all Ss Yy
-Mate 1st Generation: $\rightarrow$ 2nd Generation
-
-Phenotype | Theoretical Proportion
-----| ---- 
-Round, Yellow | 9/16 
-Round, Green | 3/16
-Wrinkled, Yellow | 3/16
-Wrinkled, Green | 1/16
+- The standard error for $\bar{x}_{1}-\bar{x}_{2}$ is
+$$S E_{\bar{x}_{1}-\bar{x}_{2}}=\sqrt{\frac{\sigma_{1}^{2}}{n_{1}}+\frac{\sigma_{2}^{2}}{n_{2}}}$$
 ]
 
----
-
-# Mendel’s Pea Experiment
- 
-Phenotype | Theoretical Proportion | Observed Counts
-----| ---- | ---- | ----
-Round, Yellow | 9/16 | 315
-Round, Green | 3/16 | 101
-Wrinkled, Yellow | 3/16 | 108
-Wrinkled, Green | 1/16 | 32
-
-Let’s test this data against the null hypothesis of each $p_i$ equal to the theoretical value, based on genetics
-
-$$H_{0}: p_{1}=9 / 16, p_{2}=3 / 16, p_{3}=3 / 16, p_{4}=1 / 16$$
-$$H_{a} : \text{ At least one } p_{i} \text{ is not as specified in } H_{0}$$
----
-
-# Mendel’s Pea Experiment
-
-.pull-left[
-What is the expected count for round green peas?
-
-A. 0.182
-
-B. 108
-
-C. 104.25
-
-D. 139
-]
-
-.pull-right[
-Phenotype | Theoretical Proportion | Observed Counts
-----| ---- | ---- | ----
-Round, Yellow | 9/16 | 315
-Round, Green | 3/16 | 101
-Wrinkled, Yellow | 3/16 | 108
-Wrinkled, Green | 1/16 | 32
-]
 
 ---
 
-# Mendel’s Pea Experiment
+class: middle
+
+# Unknown $\sigma$
 
 
-.pull-left[
-Phenotype | Theoretical Proportion | Observed Counts
-----| ---- | ---- | ----
-Round, Yellow | 9/16 | 315
-Round, Green | 3/16 | 101
-Wrinkled, Yellow | 3/16 | 108
-Wrinkled, Green | 1/16 | 32
+.bqt[But we usually do not know $\sigma$ !
+  - Estimate $\sigma$ with the sample SD $s$
 ]
-.pull-right[
-The $\chi$^2 statistic is the sum of 4 components (because there are 4 categories).  What is the contribution to the $\chi$^2 statistic from the “Round, Yellow” category?
 
-1. 0.016
 
-2. 1.05
+---
 
-3. 5.21
+class: middle
 
-4. 107.2
+# Central Limit Theorem for means: One sample
+
+.bql-list[
+
+The sampling distribution for a sample mean is approximately $N\left(\mu, S E_{\bar{x}}\right)$]
+
+<br>
+
+.bql[
+When is this approximately "good"?
+
+- if $X \sim N(\mu, \sigma)$ then $\bar{X} \sim N(\mu, \sigma / \sqrt{n})$
+
+- if $X \nsim N(\mu, \sigma)$ then $\bar{X} \sim N(\mu, \sigma / \sqrt{n})$ if $n \geqslant 30$
+]
+
+
+---
+
+class: middle
+
+# Problem!
+
+.bql.font90[
+- The estimated SE varies from sample to sample, along with $\bar{x}$ ! 
+
+- In $z$, only $\bar{x}$ varies from sample to sample
+$$z=\frac{\bar{x}-\mu}{\sigma / \sqrt{n}} \sim N(0,1)$$
+
+- In $t$, both $\bar{x}$ and $s$ vary from sample to sample
+$$t=\frac{\bar{x}-\mu}{s / \sqrt{n}} \sim ? ? ?$$
 
 ]
 
----
-
-# Mendel’s Pea Experiment
-
-$$\chi^{2}=0.47$$
-
-Two options:
-- Simulate a randomization distribution
-- Compare to a $\chi^{2}$ distribution with 4-1
-
-
-.pull-left[
-<center>
-<img src="images/pea_rand1.png" width="75%" height="75%"><br>
-</center>
-]
-.pull-right[
-<center>
-<img src="images/pea_rand2.png" width="75%" height="75%"><br>
-</center>
-]
 
 ---
 
-# Mendel’s Pea Experiment
+class: middle
 
-.blockquote[
-Does this prove Mendel’s theory of genetics?  Or at least prove that his theoretical proportions for pea phenotypes were correct?
+# Central Limit Theorem for means: Two independent samples:
 
-1. Yes
-2. No
+.bql-list[
+The sampling distribution for a difference of two independent sample means is approximately $N\left(\mu_{1}-\mu_{2}, S E_{\bar{x}_{1}-\bar{x}_{2}}\right)$
 ]
 
 <br>
 
-.out-t[p-value = 0.925]
+.bql[
+When is this approximately "good"?
+- need both $n_{1}$ and $n_{2}$ samples sizes big enough for the one-sample condition
+]
+
+
+---
+
+# Inference for means
+
+.green-h[.purple[Check:] Check the one- or two-sample size conditions for the CLT]
+
+.pull-left[
+.bql[
+Tests: Use t-ratios of the form
+$$t=\frac{\text { stat }-\text { null value }}{S E}$$
+P-values computed from a t-distribution with appropriate $\mathrm{df}$
+- `pt(t, df= )` gives the area to the left of $t$
+]
+]
+
+.pull-right[
+.bql[
+Confidence intervals: $\mathrm{CI}$ of the form
+$$\text { stat } \pm t^{*} S E$$
+The $t^{*}$ multiplier comes from a t-distribution with appropriate $d f$
+- `qt(0.975, df= )` gives $t^{*}$ for $95 \%$ confidence
+
+]
+
+]
+
+
+---
+
+# Florida lakes
+
+.bql.font80[53 lakes were sampled, pH recorded
+- Is average pH in Florida lakes different from 7 (neutral)?
+- Let $\mu$ be the mean pH for all Florida lakes
+$$H_0: \mu = 7 \qquad\qquad H_A: \mu \neq 7$$
+]
+
+.bqt.font80[Can we use a t-test?
+- $n=53$ is a decent sample size
+- check sample distribution of pHs
+]
+
+
+---
+
+`r chunk_reveal("hist", widths = c(0.5, 0.5), font_size_code="70%", title = "## Florida lakes")`
+
+```{r hist, fig.width = 3, fig.height = 3.5, out.width = "100%", include=FALSE}
+library(ggplot2)
+lakes <- read.csv("http://www.lock5stat.com/datasets2e/FloridaLakes.csv")
+ggplot(lakes, aes(x = pH)) +
+  geom_histogram(fill = "steelblue", 
+                 bins = 7,
+                 col = "lightblue")
+```
+
+---
+
+# Florida lakes
+
+.bql.font80[
+$$H_0: \mu = 7  \qquad\qquad  H_A: \mu \neq 7$$
+Data: The average pH was $\bar{x}=6.591$ with a standard deviation of $s=1.288$.]
+
+.pull-left[
+```{r, collapse=TRUE}
+mean(lakes$pH)
+```
+]
+
+.pull-right[
+```{r, collapse=TRUE}
+sd(lakes$pH)
+```
+]
+
+.bql.font80[
+
+- The t-test stat is
+$$t = \dfrac{6.591 - 7}{1.288/\sqrt{53}} \approx -2.31$$
+
+- .bold[Interpret t]: The observed mean of 6.591 is 2.31 SEs below 7.
+
+]
+
+
+---
+
+# Florida lakes
+
+.pull-left[
+.bql.font80[
+$$H_0: \mu = 7 \qquad\qquad  H_A: \mu \neq 7$$
+- .bold[p-value] $2 \times P(t < -2.31)$, or double left tail area below -2.31
+  - use t-distribution with $df = 53-1= 52$
+]
+    
+```{r, collapse=TRUE}
+2*pt(-2.31, df=53-1)  # df = n-1
+```
+
+]
+
+.pull-right[
+.bql.font80[
+- .bold[Interpret:] The p-value is 0.025. If the mean pH of all lakes is 7, then we would see a sample mean that is at least 2.31 SEs away from 7 about 2.5% of the time in samples of 53 lakes. 
+
+
+- .bold[Conclusion:] There is a statistically significant difference between the observed mean pH of 6.591 and the hypothesized mean of 7 (t=-2.31, df=52, p=0.025). 
+]
+]
+
+---
+
+## Florida lakes: `t.test` in R
+
+- We can also use `t.test` in R !
+
+```{r, size = "huge"}
+t.test(lakes$pH, mu  = 7)
+```
+
+
+---
+
+# Florida lakes
+
+.bql[
+How different is the population mean from 7?
+
+- 95% CI for $\mu$:
+
+
+$$6.591 \pm 2.0066 \dfrac{1.288}{\sqrt{53}} = 6.591 \pm 0.355 = (6.236, 6.946)$$
+where $t^*$ corresponds to 95% confidence (97.5th percentile):
+]
+
+
+```{r, collapse=TRUE}
+qt(.975, df=53-1)
+```
+
+..hljs[We are 95% confident that the mean pH of all lakes is between 6.236 and 6.946 (slightly acidic)]
+
+
+---
+
+class: middle
+
+# Academic Performance Index (API) 
+
+.bql-list[
+Academic Performance Index (API) is a number reflecting a school’s performance on a statewide standardized test
+  - simple random sample of $n=200$ schools
+  - variable `growth` measures the growth in API from 1999 to 2000 (API 2000 - API 1999).
+]
+
+```{r}
+# read data
+api <- read.csv("https://raw.githubusercontent.com/deepbas/statdatasets/main/API.csv")
+```
+
+---
+
+class: middle
+
+# Academic Performance Index (API) 
+
+.code110[
+```{r, collapse=TRUE}
+api$wealth <- ifelse(api$meals > 50, "low","high")
+table(api$wealth)
+```
+]
+
+
+.code110[
+```{r, collapse=TRUE}
+library(dplyr)
+api %>% 
+  group_by(wealth) %>% 
+  summarize(mean(growth), sd(growth))
+```
+]
+
+---
+
+# API
+
+```{r, fig.width=5, fig.height=4, out.width="50%", fig.align='center'}
+ggplot(api, aes(x = wealth, y = growth)) + geom_boxplot() + 
+  labs(y ="API growth (2000 - 1999)") + coord_flip()
+```
+
+
+---
+
+## Hypothesis Test: Can we use t-inference methods to compare mean growths?
+
+.bql.font80[
+- Both samples sizes (98 and 102) can be deemed large 
+- No severe skewness (but two extreme outliers)
+]
+
+.bqt.font80[
+- Estimated Standard Error : $SD_{\bar{x}_h - \bar{x}_l} = \sqrt{\dfrac{28.75380^2}{102} + \dfrac{29.95048^2}{98}} = 4.1544$
+
+- Test statistics: $t = \dfrac{(25.24510 - 38.82653) - 0}{4.154404} = -3.2692$
+]
+
+..hljs[The observed mean difference is 3.3 SEs below the hypothesized mean difference of 0]
+
+---
+
+# Two-sample t-test
+
+```{r, highlight.output = c(5)}
+t.test(growth ~ wealth, data = api)
+```
+
+.font80[
+> The p-value is 0.001273. If there is no difference between mean growth in the two populations,
+then there is just a 0.13% chance of seeing a sample mean difference that is 3.27 standard errors or more
+away from 0.
+]
+
+---
+
+# Outliers
+
+```{r, collapse=TRUE}
+which(api$growth > 120 )
+```
+
+
+```{r, collapse=TRUE}
+api %>% slice(74,119)  
+```
+
+---
+
+# Remove Outliers
+
+```{r, highlight.output = c(5)}
+t.test(growth ~ wealth, data = api, subset = -c(74,119))
+```
+
+..hljs[How does removing outliers influence `t-test` stat and p-value?]
+
+
+---
+
+# Confidence Interval
+
+.pull-left[
+.bql-list.font90[
+.bolder[95% Confidence Interval from the output:]
+- Without Outliers: (-23.57, -8.96)
+- With Outliers: (-21.77, -5.39)
+]
+]
+
+.pull-right[
+.bql.font80[
+.bolder[Removing Outliers:]
+- the difference in means shifted further away from 0
+- CI shifted further from a difference of 0
+- decrease the SE of our sample difference
+]
+]
+
+--
+
+.bql.font90[
+.bold[Interpretation:] We are 95% confident that the mean API growth between 1999 and 2000 for all low wealth
+schools is anywhere from 8.96 points to 23.57 points higher than the mean API growth for all high wealth
+schools in California.
+]
+
+---
+
+## Paired Data
+
+.bql.font90[Data are paired if the data being compared consists of paired data values. Common paired data examples:
+  - Two measurements on each case
+  - natural pairs (twins, spouses, etc)
+]
+
+--
+
+.bql.font90[Use paired data to reduce natural variation in the response when comparing the two groups/treatments
+  - comparing group 1 and 2 responses among similar individuals 
+  - reduces the effects of confounding variables
+  - reduces the SE for the mean difference!
+]
+
+---
+
+class: middle
+
+# Analyzing paired data
+
+.bql.font80[
+- Look at the difference between responses for each unit (pair)
+$$d_{i} = x_{1,i} - x_{2,i}$$
+
+- Analyze the .bold[mean of these differences] rather than the average difference between two groups
+$$\textrm{sample mean difference: } \bar{d}$$
+$$\textrm{sample SD of difference: } s_d$$
+$$\textrm{population mean difference: } \mu_d$$
+
+- Use .bold[one sample] inference methods for these differences
+]
+
+---
+
+# Tuition example
+
+.bql.font90[How much higher is non-resident tuition, on average, compared to resident tuition? Use the `Tuition2006.csv` lab manual data
+  - the variable `Diff` computes the difference `Res` - `NonRes`
+]
+    
+```{r, collapse=TRUE, highlight.output = 6}
+tuition <- read.csv("http://math.carleton.edu/Stats215/RLabManual/Tuition2006.csv")
+str(tuition)
+```
+
+
+---
+
+## Tuition example
+
+.bql.font80[
+- Smaller sample size (n=19) and slightly left-skewed distribution or roughly symmetric with one low case!
+]
+
+
+.pull-left[
+```{r, echo=FALSE}
+ggplot(tuition, aes(x = Diff)) +
+  geom_histogram(fill = "steelblue", 
+                 bins = 5,
+                 col = "lightblue") +
+  labs(title = "Histogram")
+```
+]
+.pull-right[
+```{r, echo=FALSE}
+ggplot(tuition, aes(sample = Diff)) +
+  stat_qq() +
+  stat_qq_line()+
+  labs(title = "Q-Q Plot")
+```
+]
+
+---
+
+## Tuition example
+
+.bql[We are 95% confident that the mean tuition for non-residents is $2,585 to $4584 higher than mean tuition for residents]
+
+```{r, collapse=TRUE}
+t.test(tuition$Diff)
+```
+
+```{r, collapse=TRUE}
+sd(tuition$Diff)/sqrt(19)  # SE for mean diff
+```
+
 
 ---
 
@@ -482,9 +570,9 @@ class: action
 <br>
 <br>
 
-.blockquote[
+.bql[
 - Go over to the in class activity file
-- Complete the activity in your group
+- Complete the activity 
 ]
 ]
 
