--- a/public/stat120/Day22.Rmd
+++ b/public/stat120/Day22.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Multiple comparisons"
+title: "Comparing Two or more Means"
 subtitle: "<br/> STAT 120"
 author: "Bastola"
 date: "`r format(Sys.Date(), ' %B %d %Y')`"
@@ -69,7 +69,12 @@ theme_set(theme_tufte(base_size = 10))
 
 yt <- 0
 
+set.seed(1234)
+
+
+
 # read.csv("https://raw.githubusercontent.com/deepbas/statdatasets/main/agstrat.csv")
+
 ```
 
 
@@ -91,7 +96,7 @@ layout: true
 
 class: title-slide, middle
 
-# .fancy[ANOVA Pairwise Comparisons]
+# .fancy[Comparing Two or more Means]
 
 ### .fancy[Stat 120]
 
@@ -99,407 +104,485 @@ class: title-slide, middle
 
 ---
 
-class: middle
+# Inference tools (Classical methods)
 
-# Post-ANOVA
+.pull-left[
+.bq.font80[
+Categorical Response
 
-.blockquote.font90[
-- Inference .bold[AFTER] doing .bold[ANOVA] to compare means for several groups:
+1. One proportion: .blue[sample z test/CI]
 
-    - Confidence interval for a single mean
-    - Confidence interval for a difference in two means
-    - Pairwise t-test for a difference in two means
+2. Difference in 2 props: .blue[2 sample z test/CI OR chi-square test]
 
+3. Association between 2 categorical variables: .blue[chi-square test]
+]
+]
+.pull-right[
+.bq.font80[
+Quantitative Response
+
+1. One mean: .blue[1 sample t test/CI]
+  
+2. Difference in 2 means: .blue[2 independent sample t test/CI OR Matched pairs]
+  
+3. Compare >2 means: .b[One-way ANOVA]
+  <br>
+
+]
 ]
 
 ---
 
 class: middle
 
-# ANOVA for Difference in Means
+# Multiple Categories
 
-.blockquote.font90[
-- .bold[Data:] Random samples of size $n_1, n_2, \cdots , n_k$ from each of k populations (or groups)
-
-- .bold[Summary statistics:]
-
-    - Sample mean for each group
-    - Std. dev. for each group
-    - Mean and std. dev. for all values
-
+.bqt[
+So far, we’ve learned how to do inference for a difference in means IF the categorical variable has only two categories (i.e. compare two groups)
 ]
-
----
-
-class: middle
-
-# ANOVA for Difference in Means
-
-.blockquote[
-$$H_0:\mu_1 = \mu_2 = \cdots = \mu_k$$
-$$H_a: \text{at least one } \mu_i \text{ is different}$$
-
-- .bold[Conditions:] Similar variability AND either sample sizes in each group are large (each $n_i \geq 30$) OR the data are relatively normally distributed
-]
-
----
-
-class: middle
-
-# Cuckoo Birds
-
-.pull-left-60[
-.blockquote.font80[
-- Cuckoo birds lay their eggs in the nests of other birds
-
-- When the cuckoo baby hatches, it kicks out all the original eggs/babies
-
-- If the cuckoo is lucky, the mother will raise the cuckoo as if it were her own
-  - Do cuckoo bird eggs found in nests of different species differ in size?
-]
-]
-
-.pull-right-40[
 <br>
+
+.bqt[
+In this section, we’ll learn how to do hypothesis tests for a difference in means .b[across multiple categories (i.e. compare more than two groups)]
+]
+
+---
+
+class: middle
+
+# Hypotheses
+
+.bql[To test for a difference in true/population means across k groups:
+
+\begin{align*}
+H_{0}:& \quad \mu_{1}=\mu_{2}=\ldots=\mu_{k}\\
+H_{a}:& \quad \text{At least one } \mu_{i} \neq \mu_{j}
+\end{align*}
+
+
+]
+
+---
+
+# Frisbee Example 
+
+.out-t[Does Frisbee grip affect the distance of a throw?]
+
+.hljs.font80[A student performed the following experiment: 3 grips, 8 throws using each grip
+    1. Normal grip
+    2. One finger out grip
+    3. Frisbee inverted grip]
+
+
+.bql.font80[A grip type is randomly assigned to each of the 24 throws she plans on making
+
+  - Response: measured in paces how far her throw went
+  - Question: How might you summarize her data?
+]
+
+---
+
+# Frisbee Example
+
+.pull-left[
+<center>
+<img src="images/frisbee.png" width="80%" height="80%"> <br>
+</center>
+]
+.pull-right[
+<br>
+<br>
+
+&nbsp; | Finger-out | Inverted   | Normal
+-------- | ------------- | ----------- | -----------
+n | 8  |  8   |   8  
+Mean |  29.5  | 32.375    | 33.125
+SD |  4.175 | 3.159  |  3.944
+
+]
+
+.bql.font90[
+Question: Is this evidence that grip affects mean distance thrown? 
+\begin{align*}
+H_{0}:& \quad \mu_{1}=\mu_{2}=\mu_{3}\\
+H_{a}:& \quad \text{At least one } \mu_{1}, \mu_{2}, \mu_{3} \text{ is not the same}
+\end{align*}
+]
+
+---
+
+# Why Analyze Variability to Test for a Difference in Means?
+
+.pull-left-40[
+
+.bql.font80[
+- The group means in Datasets $A$ and $B$ are the same, but the boxes show different spread.
+
+- Datasets $A$ and $C$ have the same spread for the boxes, but different group means.
+]
+]
+.pull-right-60[
+<center>
+<img src="images/anova-plot.png" width="90%" height="90%"> <br>
+</center>
+.hljs[Which of these graphs appear to give strong visual evidence for a difference in the group means?]
+]
+
+---
+
+class: middle
+
+# Why Analyze Variability to Test for a Difference in Means?
+
+.pull-left-40[
+
+.bql.font90[
+- Dataset A = weakest evidence for a difference in means.
+- Datasets B and C = strong evidence for a difference in means.
+]
+]
+.pull-right-60[
+
+<center>
+<img src="images/anova-plot.png" width="90%" height="90%"> <br>
+</center>
+
+]
+
+---
+
+class: middle
+
+# Why Analyze Variability to Test for a Difference in Means?
+
+.pull-left-40[
+
+.bql.font90[
+Conclusion: An assessment of the difference in means between several groups depends on two kinds of variability:
+1. How different the means are between each groups
+2. The amount of variability within each groups
+]
+]
+.pull-right-60[
 <br>
 <center>
-<img src="images/cuckoo.jpg" width="60%" height="60%"> <br>
-<a>Cuckoo bird in nest</a>
+<img src="images/anova-plot.png" width="90%" height="90%"> <br>
 </center>
 ]
 
 ---
 
+# Analysis of Variance
+
+.hljs[
+Analysis of Variance (ANOVA) compares the variability between groups to the variability within groups
+]
+
+<center>
+<img src="images/ANOVA-decomposition.png" width="90%" height="80%"> 
+</center>
+
+---
+
+# F-Statistic
+
+.bql.font90[
+The F-statistic is a ratio:
+$$F=\frac{M S G}{M S E}=\frac{\text { average between group variability }}{\text { average within group variability }}$$
+
+If there really is a difference between the groups $(H_A \text{ true})$, we would expect the F-statistic to be
+
+a) Large positive
+
+b) Large negative
+
+c) Close to 0
+]
+
+<details>
+<summary>.red[Click for answer]</summary>
+.hljs[
+The correct answer is a. If there is a difference, we expect the between group variability to be higher than within group variability. .red[RIGHT TAIL test!]]
+</details>
+
+---
+
 class: middle
 
-# Cuckoo Dataset
+# Frisbee Example
 
-.pull-left[
-.blockquote.font90[
-- .bold[cuckoo] dataset contains information on 120 Cuckoo eggs, obtained from randomly selected "foster" nests.
+```{r}
+frisbee <- read.csv("https://raw.githubusercontent.com/deepbas/statdatasets/main/Frisbee.csv")
+frisbee.anova <- aov(Distance ~ Grip, data = frisbee) # fit an ANOVA model
+```
 
-- researchers have measured the `length` (in mm) and established the `type` (species) of foster parent.
+
+
+```{r, highlight.output = c(2), collapse=TRUE}
+summary(frisbee.anova)
+```
+
+.hljs[
+F-test statistic: 2.045
+
+P-value: 0.154
 ]
 
+---
+
+# How to determine significance?
+
+.out-t[We have a test statistic. What else do we need to perform the hypothesis test?]
+
+--
+
+.hljs[
+A distribution of the test statistic assuming $H_0$ is true.
 ]
-.pull-right[
-.blockquote[
+
+--
+
+.bql[
+How do we get this? Two options:
+  1. Simulation
+  2. Theory
+]
+
+---
+
+class: middle
+
+# F-distribution
+
+<center>
+<img src="images/f-distribution.png" width="70%" height="70%"> <br>
+</center>
+
+---
+
+class: middle
+
+# F-Distribution
+
+.bql.font90[
+We can use the F-distribution to generate a p-value if:
+
+  1. Sample sizes in each group are large (each $n_{i} \geq 30$ ) OR the data within each group are relatively normally distributed
+  2. Variability is similar in all groups
+]
 <br>
-- `type=1`: Meadow pipit
-- `type=2`: Tree pipit
-- `type=3`: Dunnock
-- `type=4`: European robin
-- `type=5`: White wagtail
-- `type=6`: Eurasian wren
-]
+.bql[
+- The F-distribution has two degrees of freedom, one for the numerator of the ratio $(\boldsymbol{k}-\mathbf{1})$ and one for the denominator $(n-k)$
+- For F-statistics, the p-value (the area as extreme or more extreme) is always the right tail
 
-]
-
----
-
-class: inverse, middle
-
-.bold.large[Goal: test if the type of foster parent has an effect on the average length of the cuckoo eggs.]
-
----
-
-`r chunk_reveal("cuckoo", widths= c(0.73,0.27), font_size_code="70%", title = "## ANOVA")`
-
-```{r cuckoo, fig.width = 3, fig.height = 3.5, out.width = "100%", include=FALSE}
-library(dplyr)
-cuckoo <-  read.csv("https://raw.githubusercontent.com/deepbas/statdatasets/main/cuckoo.dat", sep = "")
-cuckoo <- cuckoo %>%
-  `colnames<-`(c("length", "type")) %>%
-  mutate(type = as.factor(type))
-
-stat <- cuckoo %>% 
-  group_by(type) %>% 
-  summarize(mean(length), 
-            sd(length), 
-            length(length))%>%
-  `colnames<-`(c( "Type", "mean", "sd", "n"))
-stat <- as.data.frame(stat)
-knitr::kable(stat)
-```
-
----
-
-`r chunk_reveal("boxplot", widths= c(1,1), font_size_code="70%", title = "## Side-by-side Boxplot (1a)")`
-
-.scroll-box-20[
-```{r boxplot, fig.width = 3, fig.height = 3.5, out.width = "100%", include=FALSE}
-cuckoo %>%
-  ggplot(aes(x=type,y=length,fill=type)) +
-  theme_bw() +
-  geom_boxplot() +
-  geom_jitter(width = 0.2) +
-  labs(title ="Boxplot of the length of eggs per type", 
-       y = "length (mm)",
-       x = "type") + 
-  stat_summary(fun=mean, geom="point", shape=10, 
-               size=2, color="black", fill="black") +
-  theme(plot.title = element_text(hjust=0.5, size=9, 
-                                  face='bold')) 
-```
 ]
 
 ---
 
 class: middle
 
-# Check Assumptions (1b)
-
-.blockquote[
-$$H_0: \text{The mean egg length is equal between the different bird tpyes.}$$
-$$H_a: \text{The mean egg length for at least one bird type is different }$$
-
-Make sure that all assumptions for ANOVA are met:
-
-- The data (length) must be normally distributed (in all groups)
-- The variability within all groups is similar
-]
-
----
-
-`r chunk_reveal("normality", widths= c(1,1), font_size_code="70%", title = "## Approximate normality in groups (1b)")`
-
-.scroll-output[
-```{r normality, fig.width = 3, fig.height = 3.5, out.width = "100%", include=FALSE}
-cuckoo %>% 
-  ggplot(aes(sample=length)) + 
-  geom_qq() + 
-  geom_qq_line() + 
-  facet_grid(~type) +  
-  theme_bw() 
-```
-
-]
-
----
-
-# Fitting ANOVA (1c)
-
-```{r, highlight.output = c(2)}
-fit_anova <- aov(length~type, cuckoo)
-summary(fit_anova)
-```
-
---
-
-.blockquote[
-Since the .bold[p-value] is very small, at the significance level of $5\%$, we have sufficient evidence to conclude that the mean egg length for at least one bird type is .bold[different] from the mean egg length in at least one other bird type.
-]
-
---
-
-.out-t.font120[But which of the species are different?]
-
----
-
-class: middle
-
-# Inference after ANOVA
-
-.blockquote.font80[
-- Compute a CI for any $\mu_i$
-
-- Compute a CI for $\mu_i - \mu_j$
-
-- Pairwise t-test for difference in means
-
-$$H_0: \mu_i = \mu_j \text{ vs. } H_a: \mu_i \neq \mu_j$$
-
-- Use the usual procedures except:
-
-    - Estimate any $\sigma$ with the pooled standard deviation: $\sqrt{MSE}$
-    - Use the error degrees of freedom for any t-values
-]
-
----
-
-class: middle
-
-# Inference after ANOVA
-
-.blockquote.font90[
-Compute a CI for any $\mu_i$
-
-- The usual procedure:
-
-$$\bar{x}_i \pm t^{*} \frac{s_i}{\sqrt{n_i}}$$
-- .bold[BUT] after .bold[ANOVA], estimate any $\sigma$ with the pooled standard deviation:
-
-$$\bar{x}_i \pm t^{*}\frac{\sqrt{MSE}}{\sqrt{n_i}}$$
-
-  - the corresponding `df=n-k`
-]
-
----
-
-# Cuckoo Eggs (1d)
-
-> Find a 95% confidence interval for the mean cuckoo egg length in `European robin` nests (Type = 4).
-
-.pull-left[
-.font80[
-```{r}
-MSE <- 1.745
-summary(fit_anova)
-```
-]
-]
-.pull-right[
-.font80[
-```{r, echo=FALSE}
-knitr::kable(stat)
-```
-]
-]
-
-$$\bar{x}_i \pm t^{*}\frac{\sqrt{MSE}}{\sqrt{n_i}}, \text{ df = n-k }$$
-
----
-
-# Inferences after ANOVA
-
-Compute a CI for any $\mu_i - \mu_j$
-
-.blockquote.font90[
-
-- The usual procedure:
-
-$$(\bar{x}_i - \bar{x}_j) \pm t^{*} \sqrt{\frac{s_i^2}{n_i} + \frac{s_j^2}{n_j}}$$
-
-- BUT after ANOVA, estimate any $\sigma$ with the pooled standard deviation:
-
-$$(\bar{x}_i - \bar{x}_j) \pm t^{*} \sqrt{MSE \left(\frac{1}{n_i} + \frac{1}{n_j}\right)}$$
-  - the corresponding `df=n-k`
-]
-
----
-
-# Cuckoo Eggs (1e)
-
-Find a 95% CI for the difference in mean egg length between `European robin`(type = 4) and `Eurasian wren`(type = 6) nests.
+# Simulation – how is this done?
 
 .pull-left-60[
+<center>
+<img src="images/rand-frisbee.png" width="100%" height="110%"> 
+</center>
 
-.font80[
-```{r, echo=FALSE}
-summary(fit_anova)
-```
-]
 ]
 .pull-right-40[
-.font80[
-```{r, echo=FALSE}
-knitr::kable(stat)
-```
+.bql.font80[
+- An F-statistic as large as 2.045 would occur by chance about 16% of the time if the means were all equal.
+- Our results are inconclusive and do not support the claim that grips affects average distance.
 ]
 ]
 
-$$(22.575 - 21.130) \pm 1.981 \cdot \sqrt{1.745\left(\frac{1}{16} + \frac{1}{15} \right)} = (0.50, 2.39)$$
-.code80[
-```{r, collapse=TRUE}
-(stat[4,2] - stat[6,2]) + c(-1,1)* (qt(1-0.05/2, df=113))* sqrt(MSE*(1/stat[4,4] + 1/stat[6,4]))
-```
-]
-
---
-
-.out-t.font80[Why is it important that the interval contains only positive values?]
-
+.footnote[https://www.lock5stat.com/StatKey/]
 
 ---
 
-# Cuckoo Eggs (1f)
+class: middle
 
-.blockquote.font80[Find a 95% CI for the difference in mean egg length between `Dunnock` (type = 3) and `European robin`(type = 4)  nests.]
+
+# F-distribution
+
 
 .pull-left-60[
-.font80[
-```{r, echo=FALSE}
-summary(fit_anova)
-```
-]
+<center>
+<img src="images/rand-frisbee-pvalue.png" width="100%" height="100%"> 
+</center>
 ]
 .pull-right-40[
-.font80[
-```{r, echo=FALSE}
-knitr::kable(stat)
-```
-]
-]
 
-.code80[
+<br>
+<br>
+
 ```{r, collapse=TRUE}
-(stat[3,2] - stat[4,2]) + c(-1,1)* (qt(1-0.05/2, df=113))*sqrt(MSE*(1/stat[3,4] + 1/stat[4,4]))
-```
-]
-
-$$(23.121 - 22.575) \pm 1.981\cdot \sqrt{1.188\left(\frac{1}{14} + \frac{1}{16} \right)} = (-0.41, 1.50)$$
-
---
-
-.out-t.font80[What does it mean if the interval contains 0?]
-
----
-
-# Mutiple Comparisons 
-
-.blockquote.font90[
-
-- Often, doing pairwise comparisons after ANOVA involves many tests
-
-  - e.g. $k$ groups/categories,then we have $\frac{k(k-1)}{2}$ comparisons
-  - $k=6$ bird species then 15 pairwise tests.
-
-- If each test has an $\alpha$ chance of a Type I error (finding a difference between a pair that aren’t different),  the overall Type I error rate can be much higher.
-
-  - Use a smaller $\alpha$ for each pairwise test (Bonferroni)
-    - $\alpha^{*} = \frac{\alpha}{k}$
-    - e.g $\alpha = 0.05$ and $k = 6$, then $\alpha^{*} = 0.05/6 =  0.0083$
-]
----
-
-# Cuckoo Eggs (1g)
-
-- Which means are “different” at a $5\%$ significance level?
-
-```{r}
-pairwise.t.test(cuckoo$length, cuckoo$type, p.adjust.method =  "bonferroni")
+1 - pf(2.045,2,21)  # p-value
 ```
 
+]
+
+
 ---
 
-# Multiple Comparisons (1h)
+class: middle
+
+
+# Check assumptions: large sample size (or normality)
 
 .pull-left-40[
-.code80[
-```{r,message=FALSE, echo=TRUE, eval=FALSE, collapse=TRUE}
-library(multcomp, quietly = TRUE)
-fit <- lm(length~type, cuckoo)
-mcp <- glht(fit, linfct = mcp(type = "Tukey"))
-summary(mcp)
+<center>
+<img src="images/frisbee.png" width="80%" height="80%"> 
+</center>
+
+```{r, collapse=TRUE}
+table(frisbee$Grip)  # check n's
+```
+
+.hljs[
+Small $n_i$ but all groups are roughly normal
+]
+
+]
+
+.pull-right[
+
+```{r}
+# checking normality with qq-plots
+ggplot(frisbee, aes(sample = Distance)) + 
+  geom_qq() + geom_qq_line() +  facet_wrap(~Grip) +  
+  theme(axis.text.x = element_text(size = 4))
+```
+
+]
+
+---
+
+class: middle
+
+
+# Check Assumptions: Equal Variance
+
+.bql[
+The F-distribution assumes equal within group variability for each group. This is also an assumption when using the .b[randomization distribution].
+
+- As a rough .bold[rule of thumb], this assumption is violated if the largest group standard deviation is more than double the smallest group standard deviation
+]
+
+.pull-left[
+```{r}
+tapply(frisbee$Distance, frisbee$Grip, sd)
 ```
 ]
+.pull-right[Check if:
+$$\frac{\text{largest }s}{\text{smallest }s} > 2$$
 ]
-.pull-right-60[
-.code70[
-```{r,message=FALSE, echo=FALSE, collapse=TRUE}
-library(multcomp, quietly = TRUE)
-fit <- lm(length~type, cuckoo)
-mcp <- glht(fit, linfct = mcp(type = "Tukey"))
-summary(mcp)
+
+---
+
+class: middle
+
+
+# Frisbee Example: Inference
+
+.hljs[
+.bold[Question:] Is this evidence that grip affects mean distance thrown? 
+\begin{align*}
+H_{0}:& \quad \mu_{1}=\mu_{2}=\mu_{3}\\
+H_{a}:& \quad \text{At least one } \mu_{1}, \mu_{2}, \mu_{3} \text{ is not the same}
+\end{align*}
+$\mu_{\mathrm{i}}$ is the true mean distance thrown using grip $i$.
+$$F=2.05(\mathrm{df}=2,21), \text { P-value }=0.1543$$
+]
+
+
+
+
+.bq.font90[
+.b[Conclusion:] Do not reject the Null hypothesis. The difference in observed means is not statistically significant.
+
+About 15% of the time we would see the grip differences like those observed, or even bigger, when there is actually no difference between the true mean distances thrown with different grips.
+]
+
+---
+
+class: middle
+
+
+# Picturing the variation
+.pull-left[
+.left.green[Green: Variation within groups] ]
+
+.pull-right[
+.right.blue[Blue: Variation between groups]
+]
+<center>
+<img src="images/anova-picture.png" width="70%" height="70%"> <br>
+</center>
+
+
+---
+
+class: middle
+
+
+# Sums of Squares
+
+<center>
+<img src="images/anova-math.png" width="70%" height="70%"> <br>
+</center>
+
+---
+
+# Sums of Squares: Frisbee Data
+
+<center>
+<img src="images/anova-math-frisbee.png" width="70%" height="70%"> <br>
+</center>
+
+
+---
+
+class: middle
+
+
+# ANOVA Table for Frisbee data
+
+$$\text{F test stat} = 29.29/14.32 = 2.045$$
+<br>
+
+Source | df | Sum of Squares   | Mean Square
+-------- | ------------- | ----------- | -----------
+Groups <br> &nbsp; | #groups -1 <br> .red.b[3-1 = 2]|  SSG <br> .red.b[58.583]  |   SSG/df <br> .red.b[58.583/2 = 29.29]
+Error <br> (residual) | n - #groups <br> .red.b[24-3 = 21]  | SSE <br>  .red.b[300.750] | SSE/df <br> .red.b[300.75/21= 14.32]
+Total |  n-1 <br> .red.b[24-1 = 23] | SSTotal <br> .red.b[359.333]  |  &nbsp;
+
+
+---
+
+# Frisbee Example: ANOVA table in R
+
+
+```{r}
+frisbee.anova <- aov(Distance ~ Grip, data = frisbee)
 ```
-]
-]
+
+```{r, collapse=TRUE}
+summary(frisbee.anova)
+```
+
+
+```{r}
+library(broom) 
+knitr::kable(tidy(frisbee.anova)) # nicer summary tables
+```
 
 ---
 
 class: action
 
 # <i class="fa fa-pencil-square-o" style="font-size:48px;color:purple">&nbsp;Your&nbsp;Turn&nbsp;`r (yt <- yt + 1)`</i>    
+
 
 .pull-left-40[
 ![](https://media.giphy.com/media/RKApDdwsQ6jkwd6RNn/giphy.gif)
@@ -509,9 +592,9 @@ class: action
 <br>
 <br>
 
-.blockquote[
+.bql[
 - Go over to the in class activity file
-- Complete the remaining activity 
+- Complete the activity as much as possible
 ]
 ]
 
